post rebase changes